--- a/src/assets/components/Cases/Case/Plan.scss
+++ b/src/assets/components/Cases/Case/Plan.scss
@@ -2,13 +2,18 @@
     display: grid;
     grid-template-rows: 50px calc(100% - 100px) 50px;
     background-color: $background-color;
-    padding: 10px;
+    padding: 20px;
     border-radius: 10px;
     box-sizing: border-box;
+    gap: 25px;
     &-title {
-        font-size: 24px;
         font-weight: 600;
-        text-transform: uppercase;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        img{
+            cursor: pointer;
+        }
     }
     .content {
         overflow-y: auto;
