--- a/src/assets/elements/elements.scss
+++ b/src/assets/elements/elements.scss
@@ -5,3 +5,4 @@
 @import './Uploaders/FilesUploader.scss';
 @import './Inputs/Input.scss';
 @import './Uploaders/PhotoUploader.scss';
+@import './Selects/SelectAccess.scss';
