--- a/src/assets/pages/AccessPageRight.scss
+++ b/src/assets/pages/AccessPageRight.scss
@@ -22,6 +22,9 @@
                 border: solid 1px $main-color;
                 text-transform: uppercase;
                 cursor: pointer;
+                &.active {
+                    background-color: $background-color;
+                }
             }
         }
     }
