profile img and photo

--- a/src/components/User/user.css
+++ b/src/components/User/user.css
@@ -24,12 +24,13 @@
 
 .case__contact__info__img {
   position: relative;
-  display: flex;
-  justify-content: space-between;
+  display: grid;
+  grid-template-columns: 3fr 1fr;
   gap: 20px;
 }
 .case__contact__info__img__left{
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   gap: 75px;
 }
 .change_password{
