case short info styles

--- a/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
+++ b/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
@@ -1,4 +1,12 @@
 .CaseInfoBlock {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    gap: 25px;
+    &-inner{
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
     .InputBlock {
         &-default {
             display: flex;
