--- a/src/assets/components/Cases/Case/Info/CaseShortInfo.scss
+++ b/src/assets/components/Cases/Case/Info/CaseShortInfo.scss
@@ -61,7 +61,8 @@
 
       &-card {
           display: flex;
-          justify-content: space-between;
+            flex-direction: column;
+            gap: 5px;
           span{
             p{
             font-weight: bold
