--- a/src/assets/components/Cases/Cases.scss
+++ b/src/assets/components/Cases/Cases.scss
@@ -4,4 +4,5 @@
 @import "./Case/Plan.scss";
 @import "./Case/Gallery.scss";
 @import "./Case/GiveHelp.scss";
-@import "./Case/Notes.scss"
+@import "./Case/Notes.scss";
+@import "./Case/Help.scss";
