--- a/src/assets/components/Cases/Case/Gallery.scss
+++ b/src/assets/components/Cases/Case/Gallery.scss
@@ -8,13 +8,19 @@
         display: grid;
         grid-template-columns: repeat(3,1fr);
         gap: 25px;
+        
         &-img-wrap{
             display: flex;
             align-items: center;
             justify-content: center;
+            height: 250px;
             img{
-                max-height: 150px;
                 border-radius: 10px;
+                border-radius: 10px;
+                width: 100%;
+                object-fit: cover;
+                object-position: top;
+                height: 100%;
             }
         }
     }
