--- a/src/assets/components/Cases/Case/Help.scss
+++ b/src/assets/components/Cases/Case/Help.scss
@@ -70,7 +70,7 @@
         gap: 8px;
         &-date {
             display: flex;
-            align-items: center;
+            align-items: end;
             justify-content: space-between;
             gap: 8px;
         }
