--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -31,3 +31,8 @@ color: $main-color;
 .add-icon{
     cursor: pointer;
 }
+.video{
+    height: 100%;
+    width: 100%;
+    border-radius: 15px;
+}
