case detailed info + cases list

--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -31,6 +31,10 @@ color: $main-color;
 .add-icon{
     cursor: pointer;
 }
+.header-icon{
+    color: #fff;
+    cursor: pointer;
+}
 .video{
     height: 100%;
     width: 100%;
