--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -34,6 +34,14 @@ color: $main-color;
 .header-icon{
     color: #fff;
     cursor: pointer;
+    &-exit{
+        :hover{
+            color: #f00;
+        }
+    }
+}
+.black-icon{
+    color: #2b2b2b;
 }
 .video{
     height: 100%;
