add event modal, add resources modal

--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -1,4 +1,6 @@
 @import "./Settings/Settings.scss";
 @import './Cases/Cases.scss';
 @import './gallery/gallery.scss';
-@import './User/User.scss'
+@import './User/User.scss';
+@import "./Resources/Resources.scss";
+@import "./Contacts/ContactForm.scss";
