--- a/src/components/Events/events.module.css
+++ b/src/components/Events/events.module.css
@@ -71,12 +71,8 @@
     display: flex;
     flex-direction: column;
 }
-.info > div{
-    border-bottom: double 4px var(--main-color);
-    padding-bottom: 10px;
-}
 .info{
-    padding-top: 80px;
+    padding: 80px 20px 0px 20px;
 }
 .info__inner__modal{
     width: 90%;
