--- a/src/assets/components/Contacts/ContactForm.scss
+++ b/src/assets/components/Contacts/ContactForm.scss
@@ -6,5 +6,13 @@
         display: flex;
         width: 100%;
         gap: 25px;
+        &-flex{
+            width: max-content;
+            font-size: 20px;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
     }
 }
