--- a/src/assets/components/components.scss
+++ b/src/assets/components/components.scss
@@ -4,3 +4,4 @@
 @import './User/User.scss';
 @import "./Resources/Resources.scss";
 @import "./Contacts/ContactForm.scss";
+@import './Groups/index.scss';
