--- a/src/components/Cases/Case/Info/Info.css
+++ b/src/components/Cases/Case/Info/Info.css
@@ -24,9 +24,10 @@
 }
 .case__contact__info{
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 250px 1fr;
     column-gap: 20px;
     margin-top: 50px;
+    overflow-x: auto;
 }
 .case__contact__info__img{
     position: relative;
