--- a/src/components/Settings/settings.css
+++ b/src/components/Settings/settings.css
@@ -75,6 +75,11 @@
     row-gap: 50px;
     width: 80%;
     margin: auto;
+    grid-template-rows: 60vh;
+}
+.settings__page > div {
+    overflow-y: auto;
+    max-height: 60vh;
 }
 .set__user__control__panel__icons{
     display: flex;
