--- a/src/assets/components/Settings/ListCategories.scss
+++ b/src/assets/components/Settings/ListCategories.scss
@@ -3,6 +3,8 @@
     grid-template-columns: 1fr;
     gap: 10px;
     padding: 20px 0;
+    border: solid 3px $background-color;
+    border-radius: 0 0 8px 8px;
     &--item{
         display: grid;
         grid-template-columns: 20px 20px 1fr;
