--- a/src/assets/components/Groups/Groups.scss
+++ b/src/assets/components/Groups/Groups.scss
@@ -39,5 +39,10 @@
             height: 25px;
             border-radius: 50%;
         }
+        // &-categories{
+        //     display: flex;
+        //     flex-direction: column;
+        //     gap: 10px;
+        // }
     }
 }
