--- a/src/assets/components/Cases/Add-case/Add-case.scss
+++ b/src/assets/components/Cases/Add-case/Add-case.scss
@@ -22,7 +22,10 @@
             font-weight: bold;
             padding-bottom: 10px;
         }
-        
+        &-line-buttons{
+            display: flex;
+            gap: 25px;
+        }
         &-line-three{
             display: grid;
             grid-template-columns: 1fr 1fr 1fr;
