--- a/src/components/Cards/cards.css
+++ b/src/components/Cards/cards.css
@@ -1,5 +1,8 @@
 .wrap__cards{
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 25px;
 }
 .inner__cards{
     width: 80%;
@@ -26,7 +29,11 @@
     overflow: hidden;
 }
 
-
+.categories__data{
+    display: flex;
+    flex-direction: column;
+    gap: 7.5px;
+}
 .card__img img{
 width: 100%;
 border-radius: 10px;
@@ -90,7 +97,6 @@ border-radius: 10px;
     background-color: black;
     border-radius: 50%;
     box-shadow:  0 0 5px 0 #00000077;
-    margin: auto;
 }
 .card__categories{
    display: flex;
