--- a/src/components/Cases/Cases.module.css
+++ b/src/components/Cases/Cases.module.css
@@ -3,7 +3,10 @@
 }
 .select__sort{
     width: 50%;
-    padding: 15px 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
     margin:auto
 }
 .look__more{
@@ -28,10 +31,7 @@
     text-align: center;
 }
 .like__btn{
-    display: block;
-    margin: auto;
     width: max-content;
-    margin-top: 15px;
     cursor: pointer;
     border: solid 4px var(--main-color);
     border-radius: 10px;
