--- a/src/assets/defaultClasses.scss
+++ b/src/assets/defaultClasses.scss
@@ -32,6 +32,10 @@ color: $main-color;
 .add-icon{
     cursor: pointer;
 }
+.rotate90-icon{
+    transform: rotate(90deg);
+    transition: all .3s;
+}
 .header-icon{
     color: #fff;
     cursor: pointer;
@@ -50,5 +54,5 @@ color: $main-color;
     border-radius: 15px;
 }
 .fs16{
-    font-size: 26px;
+    font-size: 26px !important;
 }
