--- a/src/assets/components/Cases/Add-case/Add-case.scss
+++ b/src/assets/components/Cases/Add-case/Add-case.scss
@@ -49,3 +49,18 @@
     }
     
 }
+@media screen and (max-width:720px) {
+.AddCaseForm{
+    &-inner{
+        &-line-three{
+            grid-template-rows: repeat(3,1fr);
+            grid-template-columns: none;
+        }
+        &-line-two{
+            grid-template-rows: repeat(2,1fr);
+            grid-template-columns: none;
+        }
+
+    }
+}
+}
