--- a/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
+++ b/src/assets/components/Cases/Case/Info/CaseInfoBlock.scss
@@ -107,3 +107,9 @@
         }
     }
 }
+@media screen  and (max-width:720px){
+    .CaseInfoBlock{
+        grid-template-columns: none;
+        grid-template-rows: max-content max-content;
+    }
+}
