--- a/src/assets/pages/AccessPageRight.scss
+++ b/src/assets/pages/AccessPageRight.scss
@@ -5,8 +5,11 @@
     grid-template-columns: 1fr 3fr;
     gap: 50px;
     &-left{
-        // height: 300px;
-        // overflow-y: scroll;
+        &-title{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
         padding: 25px;
         display: flex;
         flex-direction: column;
@@ -61,5 +64,11 @@
             }
         }
         }
+    }
+}
+@media screen and (max-width:720px){
+    .AccessPageRight{
+        grid-template-columns: none;
+        grid-template-rows: max-content max-content;
     }
 }
