mobile version + small fixes

--- a/src/components/Events/Event/event.module.css
+++ b/src/components/Events/Event/event.module.css
@@ -4,8 +4,8 @@
 .inner{
     width: 80%;
     margin: auto;
-    display: grid;
-    grid-template-columns: 1fr;
+    display: flex;
+    flex-direction: column;
     gap: 30px;
 }
 .title__wrap{
