--- a/src/components/Auth/Registration.css
+++ b/src/components/Auth/Registration.css
@@ -79,8 +79,16 @@
 .reg__form__recovery__btn:hover{
     color: #00000099;
 }
-@media (max-width:700px){
+@media (max-width:720px){
     .reg__container{
         width: 90%;
+    }
+}
+@media (max-width:520px){
+    .reg__split{
+        grid-template-columns: 1fr;
+    }
+    .reg__block{
+        flex-direction: column;
     }
 }
