--- a/src/components/Events/events.module.css
+++ b/src/components/Events/events.module.css
@@ -11,6 +11,9 @@
 }
 .wrap{
     position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 .res__color{
     width: 100%;
@@ -84,7 +87,14 @@
     grid-template-columns: 1fr;
     gap: 10px;
 }
-
+.title{
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+.title >span{
+    cursor: pointer;
+}
 @media screen and (max-width:720px) {
     .inner{
         grid-template-columns: 1fr;
