--- a/src/assets/elements/Uploaders/FilesUploader.scss
+++ b/src/assets/elements/Uploaders/FilesUploader.scss
@@ -8,6 +8,7 @@
     display: flex;
     gap: 25px;
 
+
     &-files {
         border: solid 3px $second-color;
         background-color: #fff;
@@ -16,7 +17,8 @@
         display: flex;
         flex-direction: column;
         gap: 10px;
-
+        max-height: 100px;
+        overflow-y: scroll;
         div {
             display: flex;
             gap: 20px;
@@ -30,7 +32,8 @@
             border-radius: 5px;
             border: solid 2px red;
         }
-        &-preview{
+
+        &-preview {
             max-width: 25px;
             max-height: 25px;
         }
@@ -41,10 +44,9 @@
         align-items: center;
         gap: 30px;
 
-        img{
+        img {
             height: max-content;
             cursor: pointer;
         }
     }
 }
-
