--- a/src/assets/components/Cases/Case/Info/DetailedInfo.scss
+++ b/src/assets/components/Cases/Case/Info/DetailedInfo.scss
@@ -11,6 +11,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
+       
     }
     &-InfoBlock{
         border-radius: 10px;
@@ -23,6 +24,10 @@
         &-title{
             display: flex;
             justify-content: space-between;
+            &-block {
+                font-size: 20px;
+                font-weight: 600;
+            }
         }
         &-panel{
             display: flex;
